[gd_scene load_steps=4 format=3 uid="uid://bj8xybellxgxt"]

[ext_resource type="Script" path="res://scenes/menus/menu.gd" id="1_qr7vp"]
[ext_resource type="AudioStream" uid="uid://dqmqmvofwh4jd" path="res://sounds/music/song-Menu.mp3" id="2_i8p2k"]
[ext_resource type="AudioStream" uid="uid://c1ednfjyp54fj" path="res://sounds/sfx/click L.mp3" id="3_bi2cy"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qr7vp")

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = 24.0
offset_right = 19.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="MenuTheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_i8p2k")
autoplay = true

[node name="ClickSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bi2cy")
volume_db = -5.0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
